--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         for (i=0; i < users.length; i++){
                             if (users[i].Username == username && users[i].Password == password){
                                 createCookie('ISID', users[i].ISID, Date.UTC(2022, 8, 1));
-                                window.location.href = 'homepage/homepage.html'
+                                window.location.href = '/homepage/homepage.html'
                             }
                         }
                     });
