Adding more better stuff

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 
         <div class = "login">
+            <!--<br> for spacing purposes-->
+            <br><br>
             <!--enter username and password, requires sql interaction-->
             <label for="username">Username:</label>
             <input type="text" id="username" name="username"><br>
