--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -9,6 +9,7 @@
     <body>
         <h2>Create A Profile</h2>
             <!--/database_file.sql is the file where the data will be stored; this is not the actual name-->
+           
             <form database = "/database_file.sql">
                 <label UserInput1 = "firstname">First Name: </label>
                 <input type = "text" id = "firstname" name = "firstname"><br>
@@ -86,12 +87,31 @@
                             }
                             if(i == users.length){
                                 condition = false;
+                                const cookie = escape(key) + "=" + escape(value) + ";expires=" + expiration + ";";
+                                document.cookie = cookie;
+                                console.log(cookie);
+                                console.log("Creating new cookie with key: " + key + " value: " + value);
                             }
                         }
                 });
 
+                function readCookie(name) {
+                    let key = name + "=";
+                    let cookies = document.cookie.split(';');
+                    for (let i = 0; i < cookies.length; i++) {
+                        let cookie = cookies[i];
+                        while (cookie.charAt(0) === ' ') {
+                            cookie = cookie.substring(1, cookie.length);
+                        }
+                        if (cookie.indexOf(key) === 0) {
+                            return cookie.substring(key.length, cookie.length);
+                        }
+                    }
+                    return null;
+                }
+
                 axios.post('https://sheetdb.io/api/v1/58f61be4dda40',{
-                    "data": {"ISID": isid, "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
+                    "data": {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
                 }).then( response => {
                     console.log(response.data);
                     window.location.href = '../homepage/homepage.html'
