--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -114,7 +114,8 @@
                     "data": {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
                 }).then( response => {
                     console.log(response.data);
-                    window.location.href = '../homepage/homepage.html'
+                    console.log({"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current})
+                    //window.location.href = '../homepage/homepage.html'
                 });
             </script>
 
