added a getvalues function

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             </script>
 
             <!--link to create an account-->
-            <a href="createAccount/createAccount.html">Create Account</a>
+            <br>
+            <a href="createAccount/createAccount.html">Sign Up</a>
 
         </div>
 
