--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -65,15 +65,19 @@
                 }
                 };
 
-                var firstname = document.getElementById('firstname').value;
-                var lastname = document.getElementById('lastname').value;
-                var username = document.getElementById('username').value;
-                var password = crypt.encrypt(document.getElementById('password').value);
-                var major = document.getElementById('major').value;
-                var gradyear = document.getElementById('gradyear').value;
-                var job = document.getElementById('jobexp').value;
-                var current = document.getElementById('currentemp').value;
-                console.log({"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current})
+                function getvalues(){
+                    var firstname = document.getElementById('firstname').value;
+                    var lastname = document.getElementById('lastname').value;
+                    var username = document.getElementById('username').value;
+                    var password = crypt.encrypt(document.getElementById('password').value);
+                    var major = document.getElementById('major').value;
+                    var gradyear = document.getElementById('gradyear').value;
+                    var job = document.getElementById('jobexp').value;
+                    var current = document.getElementById('currentemp').value;
+                    var age = document.getElementById('age').value;
+                    values = {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
+                }
+                
 
                 axios.get('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data')
                     .then( response => {
@@ -112,10 +116,10 @@
                 }
 
                 axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                    "data": {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
+                    getvalues()
                 }).then( response => {
                     console.log(response.data);
-                    console.log({"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current})
+                    console.log(getvalues())
                     //window.location.href = '../homepage/homepage.html'
                 });
             </script>
