--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -77,7 +77,7 @@
                     var age = document.getElementById('age').value;
                     values = {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
                 }
-                
+
 
                 axios.get('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data')
                     .then( response => {
@@ -116,7 +116,7 @@
                 }
 
                 axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                    getvalues()
+                    "data": getvalues()
                 }).then( response => {
                     console.log(response.data);
                     console.log(getvalues())
