added a return to the function getvalues

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -76,6 +76,7 @@
                     var current = document.getElementById('currentemp').value;
                     var age = document.getElementById('age').value;
                     values = {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current}
+                    return values
                 }
 
 
