--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -44,6 +44,7 @@
                     <button id=submit_account onclick='post()'>Submit</button>
                 </form>
             </div>
+
             <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
             <script>
@@ -77,32 +78,34 @@
                     var job = document.getElementById('jobexp').value;
                     var current = document.getElementById('currentemp').value;
                     var age = document.getElementById('age').value;
+                    create();
                     var values = {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current};
                     console.log(values);
                     return values
                 }
 
-
-                axios.get('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data')
-                    .then( response => {
-                        var users = response.data;
-                        var condition = true;
-                        while(condition){
-                            var isid = Math.floor(Math.random() * 100000)
-                            for (i=0; i < users.length; i++){
-                                if(users[i].ISID == isid){
-                                    break;
+                function create(){
+                    axios.get('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data')
+                        .then( response => {
+                            var users = response.data;
+                            var condition = true;
+                            while(condition){
+                                var isid = Math.floor(Math.random() * 100000)
+                                for (i=0; i < users.length; i++){
+                                    if(users[i].ISID == isid){
+                                        break;
+                                    }
+                                }
+                                if(i == users.length){
+                                    condition = false;
+                                    const cookie = escape('ISID') + "=" + escape(isid);
+                                    document.cookie = cookie;
+                                    console.log(cookie);
+                                    console.log("Creating new cookie with key: ISID value: " + isid);
                                 }
                             }
-                            if(i == users.length){
-                                condition = false;
-                                const cookie = escape('ISID') + "=" + escape(isid);
-                                document.cookie = cookie;
-                                console.log(cookie);
-                                console.log("Creating new cookie with key: ISID value: " + isid);
-                            }
-                        }
-                });
+                    });
+                }
 
                 function readCookie(name) {
                     let key = name + "=";
@@ -119,16 +122,15 @@
                     return null;
                 }
 
-                axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                    "data": getvalues()
-                }).then( response => {
-                    console.log(response.data);
-                    //window.location.href = '../homepage/homepage.html'
-                });
+                function post(){
+                    axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
+                        "data": getvalues()
+                    }).then( response => {
+                        console.log(response.data);
+                        //window.location.href = '../homepage/homepage.html'
+                    });
+                }
             </script>
-
-            <p>Create new account page works</p>
-
 
     </body>
 </html>
