--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -129,7 +129,7 @@
                         "data": data
                     }).then( response => {
                         console.log(response.data);
-                        //window.location.href = '../homepage/homepage.html'
+                        window.location.href = '../homepage/homepage.html'
                     });
                 }
             </script>
