--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -123,9 +123,8 @@
                 }
 
                 function postValues(){
-                    var data = getvalues();
                     axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                        "data": data
+                        "data": getvalues()
                     }).then( response => {
                         console.log(response.data);
                         window.location.href = '../homepage/homepage.html'
