getting rid of a copied line

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -10,9 +10,8 @@
         <br>
         <br>
         <h2>Create A Profile</h2>
-            <!--/database_file.sql is the file where the data will be stored; this is not the actual name-->
             <div class = "create">
-                <form database = "/database_file.sql">
+                <form>
                     <br>
                     <label>First Name: </label><br>
                     <input type = "text" id = "firstname"><br>
