--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -69,18 +69,22 @@
                 };
 
                 function getvalues(){
-                    var firstname = document.getElementById('firstname').value;
-                    var lastname = document.getElementById('lastname').value;
-                    var username = document.getElementById('username').value;
-                    var password = crypt.encrypt(document.getElementById('password').value);
-                    var major = document.getElementById('major').value;
-                    var gradyear = document.getElementById('gradyear').value;
-                    var job = document.getElementById('jobexp').value;
-                    var current = document.getElementById('currentemp').value;
-                    var age = document.getElementById('age').value;
-                    var values = {"ISID": readCookie('ISID'), "First_Name": firstname, "Last_Name": lastname, "Age": age, "Password": password, "Username": username, "Major": major, "Graduation_Year": gradyear, "Job_Experience": job, "Current_Employment": current};
-                    console.log(values);
-                    return values
+                    createCookie('first', document.getElementById('firstname').value);
+                    createCookie('last', document.getElementById('lastname').value);
+                    createCookie('username', document.getElementById('username').value);
+                    createCookie('passw', crypt.encrypt(document.getElementById('password').value));
+                    createCookie('major', document.getElementById('major').value);
+                    createCookie('grad',document.getElementById('gradyear').value);
+                    createCookie('job', document.getElementById('jobexp').value);
+                    createCookie('curr', document.getElementById('currentemp').value);
+                    createCookie('age', document.getElementById('age').value);
+                }
+
+                function createCookie(key, value) {
+                    const cookie = escape(key) + "=" + escape(value);
+                    document.cookie = cookie;
+                    console.log(cookie);
+                    console.log("Creating new cookie with key: " + key + " value: " + value);
                 }
 
                 
@@ -97,10 +101,7 @@
                             }
                             if(i == users.length){
                                 condition = false;
-                                const cookie = escape('ISID') + "=" + escape(isid);
-                                document.cookie = cookie;
-                                console.log(cookie);
-                                console.log("Creating new cookie with key: ISID value: " + isid);
+                                createCookie('ISID', isid);
                             }
                         }
                 });
@@ -122,8 +123,9 @@
                 }
 
                 function postValues(){
+                    getvalues();
                     axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                        "data": getvalues()
+                        "data": {"ISID": readCookie('ISID'), "First_Name": readCookie('first'), "Last_Name": readCookie('last'), "Age": readCookie('age'), "Password": readCookie('passw'), "Username": readCookie('username'), "Major": readCookie('major'), "Graduation_Year": readCookie('grad'), "Job_Experience": readCookie('job'), "Current_Employment": readCookie('curr')}
                     }).then( response => {
                         console.log(response.data);
                         window.location.href = '../homepage/homepage.html'
@@ -133,4 +135,3 @@
 
     </body>
 </html>
-
