--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -124,17 +124,7 @@
 
                 function postValues(){
                     axios.post('https://sheetdb.io/api/v1/9kxufr2k05mi6?sheet=Client_Data',{
-                        "data": {"ISID": readCookie('ISID'), 
-                            "First_Name": document.getElementById('firstname').value, 
-                            "Last_Name": document.getElementById('lastname').value, 
-                            "Age": document.getElementById('age').value, 
-                            "Password": crypt.encrypt(document.getElementById('password').value), 
-                            "Username": document.getElementById('username').value, 
-                            "Major": document.getElementById('jobexp').value, 
-                            "Graduation_Year": document.getElementById('gradyear').value, 
-                            "Job_Experience": document.getElementById('gradyear').value, 
-                            "Current_Employment": document.getElementById('currentemp').value
-                        }
+                        "data": [{"ISID": readCookie('ISID'), "First_Name": document.getElementById('firstname').value, "Last_Name": document.getElementById('lastname').value, "Age": document.getElementById('age').value, "Password": crypt.encrypt(document.getElementById('password').value), "Username": document.getElementById('username').value, "Major": document.getElementById('jobexp').value, "Graduation_Year": document.getElementById('gradyear').value, "Job_Experience": document.getElementById('gradyear').value, "Current_Employment": document.getElementById('currentemp').value}]
                     }).then( response => {
                         console.log(response.data);
                         window.location.href = '../homepage/homepage.html'
