quotes around idid in profile

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -65,7 +65,7 @@
                 var users = response.data;
 
                 for (i=0; i < users.length; i++){
-                    if (users[i].ISID == readCookie(ISID)){
+                    if (users[i].ISID == readCookie('ISID')){
 
                         console.log(users[i]);
 
