--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div class = "login">
             <!--<br> for spacing purposes-->
             <br><br>
+
+            <p hidden id='incorrect'>Incorrect Password</p>
+
             <!--enter username and password, requires sql interaction-->
             <label for="username">Username:</label>
             <input type="text" id="username" name="username"><br>
@@ -73,6 +76,7 @@
                                 window.location.href = 'homepage/homepage.html';
                             }
                         }
+                        document.getElementById('incorrect').style.visibility = "visible";
                         
                     });
                 }
