adding the logout button

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -13,6 +13,7 @@
             <li><a class="active" href="../connections/connections.html">Connections</a></li>
             <li><a href="../newPost/newPost.html">Create a Post</a></li>
             <li style="float:right"><a href="../profile/profile.html">Profile</a></li>
+            <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
         <p>Connections page works</p>
