--- a/profile/profile.html
+++ b/profile/profile.html
@@ -12,6 +12,7 @@
             <li><a href="../connections/connections.html">Connections</a></li>
             <li><a href="../newPost/newPost.html">Create a Post</a></li>
             <li style="float:right"><a class="active" href="../profile/profile.html">Profile</a></li>
+            <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
         <!--Between these comments is where the actual body is-->
