--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -43,6 +43,10 @@
                 <!--Button to submit all the info to the database-->
                 <!-- You shoudl reroute your user to a new page after submission. This can be done with routes in Javascript. -->
                 <button id=submit_account onclick='postValues()'>Submit</button>
+
+                <br>
+                <a href="../index.html">Sign in</a>
+
             </div>
             <!-- I HIGHLY RECOMMEND USING A JAVASCRIPT FOLDER THAN IN LINE. THIS IS GROSS AND WILL BE A LOT EASIER TO UNDERSTAND IF YOU REFERENCE FUNCTIONS IN A 
                 SEPARATE FILE -->
