--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -12,6 +12,7 @@
             <li><a href="../connections/connections.html">Connections</a></li>
             <li><a href="../newPost/newPost.html">Create a Post</a></li>
             <li style="float:right"><a href="../profile/profile.html">Profile</a></li>
+            <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
         <h1>Welcome to DuckedIn!</h1>
