adding cookie alert

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -16,7 +16,14 @@
             <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
-        <p>Connections page works</p>
+        <h1 id='title'>Connections</h1>
+
+        <h2 id='addNew' onclick="revealForm()">Add New Connection</h2>
+        <form action="">
+            <input type="submit" value='Submit'>
+        </form>
+
+        <div id='listedConnections'></div>
 
 
         <script>
