--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <h2>Login Page</h2>
         </div>
 
-
         <div class = "login">
             <!--<br> for spacing purposes-->
             <br><br>
 
-            <p hidden id='incorrect'>Incorrect Password</p>
+            <p id='incorrect'></p>
 
             <!--enter username and password, requires sql interaction-->
             <label for="username">Username:</label>
