big dev changes, adding connections and posts

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -26,9 +26,14 @@
         <div id='listedConnections'></div>
 
 
-        <script>
+       <!-- <script>
             console.log(getUsers());
         </script>
+        -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+        <script src='../index.js'></script>
+        <script src="connections.js"></script>
+
     </body>
 
     
