pushing the last 10 minutes of work

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -18,10 +18,8 @@
 
         <h1 id='title'>Connections</h1>
 
-        <h2 id='addNew' onclick="revealForm()">Add New Connection</h2>
-        <form action="">
-            <input type="submit" value='Submit'>
-        </form>
+        <button id='addNew' onclick="revealForm()">Add New Connection</button>
+        <form id= 'connectionForm'></form>
 
         <div id='listedConnections'></div>
 
