--- a/newPost/newPost.html
+++ b/newPost/newPost.html
@@ -19,6 +19,7 @@
         
         <form>
             <label for="newpost">Enter the details of your post here!</label><br>
+            <textarea name="title" id="postTitle" cols="70" rows="10"></textarea>
             <textarea id = "newpost" name = "newpost" rows = "8" cols = "70"></textarea><br><br>
             <input type = "submit" onclick="postData()" value = "Enter">
         </form>    
@@ -26,12 +27,6 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
         <script src='../index.js'></script>
         <script src="newPost.js"></script>
-
-
-
-
-
-
 
     </body>
 </html>
