Adding more post back end and conection backend, plus a way to add connections without the api yet

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -18,18 +18,12 @@
 
         <h1 id='title'>Connections</h1>
 
-        <button id='addNew' onclick="revealForm()">Add New Connection</button>
         <form id= 'connectionForm'></form>
+        <button onclick="revealForm()">Add New Connection</button>
 
         <div id='listedConnections'></div>
 
-
-       <!-- <script>
-            console.log(getUsers());
-        </script>
-        -->
-        <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-        <script src='../index.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
         <script src="connections.js"></script>
 
     </body>
