--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -50,7 +50,7 @@
             </div>
             <!-- I HIGHLY RECOMMEND USING A JAVASCRIPT FOLDER THAN IN LINE. THIS IS GROSS AND WILL BE A LOT EASIER TO UNDERSTAND IF YOU REFERENCE FUNCTIONS IN A 
                 SEPARATE FILE -->
-            <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
             <script src="createAccount.js"></script>
 
