--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -18,5 +18,8 @@
         <h1>Welcome to DuckedIn!</h1>
         <!--Feed/posts-->
 
+
+        <div id='postDisplay'></div>
+
     </body>
 </html>
