--- a/newPost/newPost.html
+++ b/newPost/newPost.html
@@ -20,8 +20,13 @@
         <form>
             <label for="newpost">Enter the details of your post here!</label><br>
             
-            <textarea name="title" id="postTitle" cols="70" rows="10"></textarea>
-            <textarea id = "newpost" name = "newpost" rows = "8" cols = "70"></textarea><br><br>
+            <textarea id="postTitle" name="title" cols="70" rows="1" placeholder="Title..."></textarea>
+            <textarea id = "newpost" name = "newpost" rows = "8" cols = "70" placeholder="Enter Your Post Here"></textarea><br><br>
+
+            <input type="radio" name="public" id="privacyOption1" value='public' CHECKED>Public<br>
+            <input type="radio" name="private" id="privacyOption2" value='private'>Public<br>
+
+
             <input type = "submit" onclick="postData()" value = "Enter">
         </form>    
         
