--- a/newPost/newPost.html
+++ b/newPost/newPost.html
@@ -20,7 +20,7 @@
         <form>
             <label for="newpost">Enter the details of your post here!</label><br>
             
-            <textarea id="postTitle" name="title" cols="70" rows="1" placeholder="Title..."></textarea>
+            <textarea id="postTitle" name="title" cols="70" rows="1" placeholder="Title..."></textarea><br><br>
             <textarea id = "newpost" name = "newpost" rows = "8" cols = "70" placeholder="Enter Your Post Here"></textarea><br><br>
 
             <p id='privacyLabel'>Choose whether your post should be public or private (just connections will see it)</p>
