post a post works in the previous commit!!! Also started implementing homepage feed here

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -16,10 +16,11 @@
         </ul>
 
         <h1>Welcome to DuckedIn!</h1>
-        <!--Feed/posts-->
-
 
         <div id='postDisplay'></div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+        <script src='homepage.js'></script>
 
     </body>
 </html>
