--- a/newPost/newPost.html
+++ b/newPost/newPost.html
@@ -20,12 +20,12 @@
         <form>
             <label for="newpost">Enter the details of your post here!</label><br>
             
-            <textarea id="postTitle" name="title" cols="70" rows="1" placeholder="Title..."></textarea><br><br>
-            <textarea id = "newpost" name = "newpost" rows = "8" cols = "70" placeholder="Enter Your Post Here"></textarea><br><br>
+            <textarea id="postTitle" name="title" cols="70" rows="1" placeholder="Title..."></textarea><br>
+            <textarea id = "newpost" name = "newpost" rows = "8" cols = "70" placeholder="Enter Your Post Here"></textarea><br>
 
             <p id='privacyLabel'>Choose whether your post should be public or private (just connections will see it)</p>
-            <input type="radio" name="public" id="privacyOption1" value='public' CHECKED>Public<br>
-            <input type="radio" name="private" id="privacyOption2" value='private'>Private<br>
+            <input type="radio" name="option" id="privacyOption1" value='public' CHECKED>Public<br>
+            <input type="radio" name="option" id="privacyOption2" value='private'>Private<br>
 
 
             <input type = "submit" onclick="postData()" value = "Enter">
