Adding css changes and bug fixes. Content boxes will need their size updated

--- a/connections/connections.html
+++ b/connections/connections.html
@@ -16,17 +16,18 @@
             <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
-        <h1 id='title'>Connections</h1>
+        <div class='content'>
+            <h1 id='title'>Connections</h1>
 
-        <h3> Enter a Username for a new connection here! </h3>
-        <input type="text" id="newConnection"><br><br>
-        <button onclick="submit()">Submit</button>
+            <h3> Enter a Username for a new connection here! </h3>
+            <input type="text" id="newConnection"><br><br>
+            <button onclick="submit()">Submit</button>
 
-        <div id='listedConnections'></div>
+            <div id='listedConnections'></div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-        <script src="connections.js"></script>
-        
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+            <script src="connections.js"></script>
+        </div>
     </body>
 
     
