--- a/profile/profile.html
+++ b/profile/profile.html
@@ -15,36 +15,37 @@
             <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
-        <!--Between these comments is where the actual body is-->
-        <h2>Profile</h2>
-        
-        <h1 class = "user">Username: </h1>
-        <p id = 'info'></p>
+        <div class='content'>
+            <!--Between these comments is where the actual body is-->
+            <h2>Profile</h2>
+            
+            <h1 class = "user">Username: </h1>
+            <p id = 'info'></p>
 
-        <h1 class = "name">Name: </h1> 
-        <p id = 'info'></p>
+            <h1 class = "name">Name: </h1> 
+            <p id = 'info'></p>
 
-        <h1 class = "age">Age: </h1> 
-        <p id = 'info'></p>
+            <h1 class = "age">Age: </h1> 
+            <p id = 'info'></p>
 
-        <h1 class = "major">Major: </h1> 
-        <p id = 'info'></p>
+            <h1 class = "major">Major: </h1> 
+            <p id = 'info'></p>
 
-        <h1 class = "grad">Graduation Year: </h1> 
-        <p id = 'info'></p>
+            <h1 class = "grad">Graduation Year: </h1> 
+            <p id = 'info'></p>
 
-        <h1 class = "employ">Current Employment: </h1> 
-        <p id = 'info'></p>
+            <h1 class = "employ">Current Employment: </h1> 
+            <p id = 'info'></p>
 
-        <h1 class = "exper">Job Experience: </h1> 
-        <p id = 'info'></p>
-        <!--Between these comments is where the actual body is-->
+            <h1 class = "exper">Job Experience: </h1> 
+            <p id = 'info'></p>
+            <!--Between these comments is where the actual body is-->
 
-        <!--<hr/> adds a horizontal line-->
-        <hr/>
+            <!--<hr/> adds a horizontal line-->
+            <hr/>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-        <script src="profile.js"></script>
-
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+            <script src="profile.js"></script>
+        </div>
     </body>
 </html>
