--- a/connections/connections.html
+++ b/connections/connections.html
@@ -23,6 +23,7 @@
             <input type="text" id="newConnection"><br><br>
             <button onclick="submit()">Submit</button>
 
+            <h3>Here are your connections</h3>
             <div id='listedConnections'></div>
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
