--- a/connections/connections.html
+++ b/connections/connections.html
@@ -16,14 +16,14 @@
             <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
 
-        <div class='content'>
-            <h1 id='title'>Connections</h1>
+        <h1 id='title'>Connections</h1>
 
+        <div class='content'>
             <h3> Enter a Username for a new connection here! </h3>
             <input type="text" id="newConnection"><br><br>
             <button onclick="submit()">Submit</button>
 
-            <h3>Here are your connections</h3>
+            <h3>Here are your connections:</h3>
             <div id='listedConnections'></div>
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
