Email feature added

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -25,6 +25,9 @@
                 <label>Password: </label><br>
                 <input type = "text" id = "password"><br>
 
+                <label>Email: </label><br>
+                <input type = "text" id = "Email"><br>
+
                 <label>Age: </label><br>
                 <input type = "text" id = "age"><br>
 
