--- a/profile/profile.html
+++ b/profile/profile.html
@@ -41,6 +41,9 @@
 
             <h1 class = "exper">Job Experience: </h1> 
             <p id = 'info'></p>
+
+            <h1 class = "Email">Email: </h1> 
+            <p id = 'info'></p>
             <!--Between these comments is where the actual body is-->
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
