--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,6 +17,10 @@
 
         <h1>Welcome to DuckedIn!</h1>
 
+        <p id='privacyLabel'>Feed: </p>
+        <input type="radio" name="option" id="privacyOption1" onclick="reloadFeed()" CHECKED>Global
+        <input type="radio" name="option" id="privacyOption2" onclick="reloadFeed()">Connections Only<br><br>
+
         <div id='postDisplay'></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
