css changes to global vs connections feed

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -18,8 +18,8 @@
         <h1>Welcome to DuckedIn!</h1>
 
         <p id='privacyLabel'>Feed: </p>
-        <input type="radio" name="option" id="privacyOption1" onclick="reloadFeed()" CHECKED>Global
-        <input type="radio" name="option" id="privacyOption2" onclick="reloadFeed()">Connections Only<br><br>
+        <input type="radio" name="option" id="privacyOption1" class='option' onclick="reloadFeed()" CHECKED>Global
+        <input type="radio" name="option" id="privacyOption2" class='option' onclick="reloadFeed()">Connections Only<br><br>
 
         <div id='postDisplay'></div>
 
