css changes on homepage and fixing a problem caused by the previous commit

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,9 +17,11 @@
 
         <h1>Welcome to DuckedIn!</h1>
 
+        <div id='optionbar'>
         <p id='privacyLabel'>Feed: </p>
         <input type="radio" name="option" id="privacyOption1" class='option' onclick="reloadFeed()" CHECKED>Global
         <input type="radio" name="option" id="privacyOption2" class='option' onclick="reloadFeed()">Connections Only<br><br>
+        </div>
 
         <div id='postDisplay'></div>
 
