--- a/newPost/newPost.html
+++ b/newPost/newPost.html
@@ -29,7 +29,7 @@
                 <input type="radio" name="option" id="privacyOption2" value='private'>Private<br><br>
 
 
-                <input type = "submit" onclick="await postData()" value = "Enter">
+                <input type = "submit" onclick="postData()" value = "Enter">
             </form>    
             
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
