Tring a slight change

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
             <label for="password">Password:</label>
             <input type="text" id="password" name="password"><br><br>
 
-            <button type='button' onclick="check_login();">Log in</button>
+            <button type='button' onclick="check_login();">Log in</button><br><br>
             <!--This should query the SQL database to see if this is an appropriate username and password-->
 
-            <br>
             <a href="createAccount/createAccount.html">Sign Up</a>
             
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
