updating the js link

--- a/connectedProfile/connetedProfile.html
+++ b/connectedProfile/connetedProfile.html
@@ -14,7 +14,7 @@
             <li style="float:right"><a class="active" href="../profile/profile.html">Profile</a></li>
             <li style="float:right"><a href="../index.html", onclick="logout()">Logout</a></li>
         </ul>
-
+        
 
         <h2>Profile</h2>
         
@@ -46,7 +46,7 @@
             <!--Between these comments is where the actual body is-->
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-            <script src="profile.js"></script>
+            <script src="connectedProfile.js"></script>
         </div>
     </body>
 </html>
