Fixed the issue I think

--- a/connectedProfile/connetedProfile.html
+++ b/connectedProfile/connetedProfile.html
@@ -42,7 +42,7 @@
             <p id = 'info'></p>
 
             <h1 class = "Email">Email: </h1> 
-            <a id = 'info'></a>
+            <a id = 'emailInfo'></a>
             <!--Between these comments is where the actual body is-->
 
             <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
